--- a/platforms/macos/projects/Minecraft/Minecraft.xcodeproj/xcshareddata/xcschemes/minecraftpe.xcscheme
+++ b/platforms/macos/projects/Minecraft/Minecraft.xcodeproj/xcshareddata/xcschemes/minecraftpe.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1420"
-   version = "1.8">
+   LastUpgradeVersion = "0460"
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8489B0962A86D4B2004CA8EC"
-               BuildableName = "MinecraftClient.SDL2"
-               BlueprintName = "MinecraftClient.SDL2"
+               BlueprintIdentifier = "8492591C2AD8FCFC0081F5B9"
+               BuildableName = "minecraftpe.app"
+               BlueprintName = "minecraftpe"
                ReferencedContainer = "container:Minecraft.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,15 +26,15 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug (Default)">
+      buildConfiguration = "Debug (iOS)">
       <Testables>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8489B0962A86D4B2004CA8EC"
-            BuildableName = "MinecraftClient.SDL2"
-            BlueprintName = "MinecraftClient.SDL2"
+            BlueprintIdentifier = "8492591C2AD8FCFC0081F5B9"
+            BuildableName = "minecraftpe.app"
+            BlueprintName = "minecraftpe"
             ReferencedContainer = "container:Minecraft.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -43,21 +43,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
-      useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "$(MC_ROOT)/game"
-      buildConfiguration = "Debug (Default)"
+      useCustomWorkingDirectory = "NO"
+      buildConfiguration = "Debug (iOS)"
+      ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
-      debugServiceExtension = "internal"
-      enableGPUValidationMode = "1"
-      allowLocationSimulation = "YES"
-      viewDebuggingEnabled = "No">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      allowLocationSimulation = "YES">
+      <BuildableProductRunnable>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8489B0962A86D4B2004CA8EC"
-            BuildableName = "MinecraftClient.SDL2"
-            BlueprintName = "MinecraftClient.SDL2"
+            BlueprintIdentifier = "8492591C2AD8FCFC0081F5B9"
+            BuildableName = "minecraftpe.app"
+            BlueprintName = "minecraftpe"
             ReferencedContainer = "container:Minecraft.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -68,24 +64,23 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release (Default)"
+      buildConfiguration = "Release (iOS)"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <BuildableProductRunnable>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8489B0962A86D4B2004CA8EC"
-            BuildableName = "MinecraftClient.SDL2"
-            BlueprintName = "MinecraftClient.SDL2"
+            BlueprintIdentifier = "8492591C2AD8FCFC0081F5B9"
+            BuildableName = "minecraftpe.app"
+            BlueprintName = "minecraftpe"
             ReferencedContainer = "container:Minecraft.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Debug (Default)">
+      buildConfiguration = "Debug (iOS)">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release (Default)"
+      buildConfiguration = "Release (iOS)"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
