--- a/platforms/ios/minecraftpe-Info.plist
+++ b/platforms/ios/minecraftpe-Info.plist
@@ -28,6 +28,10 @@
 	<string>public.app-category.adventure-games</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSMainNibFile</key>
+	<string>MainWindow</string>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
