--- a/platforms/sdl/android/app/build.gradle
+++ b/platforms/sdl/android/app/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
+    compileSdk 34
     defaultConfig {
         applicationId 'io.github.reminecraftpe'
         minSdkVersion 21
-        targetSdkVersion 33
+        //noinspection EditedTargetSdkVersion
+        targetSdkVersion 34
         versionCode 1
         versionName '1.0'
         externalNativeBuild {
