Simplify Android SDL Build

--- a/platforms/sdl/android/app/build.gradle
+++ b/platforms/sdl/android/app/build.gradle
@@ -32,7 +32,7 @@ android {
     }
     externalNativeBuild {
         cmake {
-            path 'src/main/cpp/CMakeLists.txt'
+            path '../../CMakeLists.txt'
             version '3.22.1'
         }
     }
