--- a/platforms/android/project/app/src/main/cpp/CMakeLists.txt
+++ b/platforms/android/project/app/src/main/cpp/CMakeLists.txt
@@ -54,21 +54,9 @@ endif()
 add_subdirectory(${MC_ROOT}/source source)
 target_link_libraries(reminecraftpe reminecraftpe-core)
 
-# Searches for a specified prebuilt library and stores the path as a
-# variable. Because CMake includes system libraries in the search path by
-# default, you only need to specify the name of the public NDK library
-# you want to add. CMake verifies that the library exists before
-# completing its build.
-
-# find_library(nameofpathvariable, nameoftheNDKlibrary)
-find_library(log-lib log)
-
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-                       reminecraftpe
-
-                       # Links the target library to log, android, GLESv1_CM and zlib
-                       ${log-lib} android EGL GLESv1_CM z )
+                       reminecraftpe android )
