--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,15 @@ on:
   - pull_request
 
 jobs:
-    build:
+    linux:
+        strategy:
+            matrix:
+                include:
+                  - name: OpenGL ES
+                    flags: "-DUSE_GLES1_COMPATIBILITY_LAYER=ON"
+                  - name: OpenGL
+                    flags: "-DUSE_GLES1_COMPATIBILITY_LAYER=OFF"
+        name: Linux (${{ matrix.name }})
         runs-on: ubuntu-latest
         steps:
           - name: Checkout Repository
@@ -16,12 +24,45 @@ jobs:
             run: |
                 sudo apt-get update
                 sudo apt-get install --no-install-recommends -y build-essential cmake ninja-build libopenal-dev libsdl2-dev libpng-dev zlib1g-dev
-          - name: Build Desktop
+          - name: Build
             run: |
                 cd platforms/sdl
                 mkdir build
                 cd build
-                cmake -GNinja ..
+                cmake -GNinja ${{ matrix.flags }} ..
                 cmake --build .
-          - name: Build WASM
+    wasm:
+        name: WASM
+        runs-on: ubuntu-latest
+        steps:
+          - name: Checkout Repository
+            uses: actions/checkout@v3
+            with:
+                submodules: true
+          - name: Build
             run: ./build-wasm.sh
+    android:
+        strategy:
+            matrix:
+                include:
+                  - name: SDL
+                    directory: platforms/sdl/android
+                  - name: Native
+                    directory: platforms/android
+        name: Android (${{ matrix.name }})
+        runs-on: ubuntu-latest
+        steps:
+          - name: Checkout Repository
+            uses: actions/checkout@v3
+            with:
+                submodules: true
+          - name: Setup JDK
+            uses: actions/setup-java@v3
+            with:
+                java-version: '17'
+                distribution: 'temurin'
+                cache: gradle
+          - name: Build
+            run: |
+                cd ${{ matrix.directory }}
+                ./gradlew build
