--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,10 @@ jobs:
             uses: actions/checkout@v3
             with:
                 submodules: true
+          - name: Install Dependencies
+            run: |
+                sudo apt-get update
+                sudo apt-get install --no-install-recommends -y cmake ninja-build
           - name: Build
             run: ./build-wasm.sh
     android:
@@ -48,7 +52,7 @@ jobs:
                   - name: SDL
                     directory: platforms/sdl/android
                   - name: Native
-                    directory: platforms/android
+                    directory: platforms/android/project
         name: Android (${{ matrix.name }})
         runs-on: ubuntu-latest
         steps:
