--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "thirdparty/coi-serviceworker"]
 	path = thirdparty/coi-serviceworker
-	url = https://github.com/gzuidhof/coi-serviceworker
+	url = https://github.com/gzuidhof/coi-serviceworker.git
 [submodule "thirdparty/gles-compatibility-layer"]
 	path = thirdparty/gles-compatibility-layer
 	url = https://github.com/TheBrokenRail/gles-compatibility-layer.git
 [submodule "thirdparty/SDL-src"]
-	path = thirdparty/SDL-src
-	url = https://github.com/libsdl-org/SDL
+	path = thirdparty/SDL2/src
+	url = https://github.com/libsdl-org/SDL.git
 [submodule "thirdparty/LibPNG-src"]
-	path = thirdparty/LibPNG-src
-	url = https://github.com/glennrp/libpng
+	path = thirdparty/LibPNG/src
+	url = https://github.com/glennrp/libpng.git
