--- a/platforms/android/project/app/src/main/AndroidManifest.xml
+++ b/platforms/android/project/app/src/main/AndroidManifest.xml
@@ -3,10 +3,11 @@
 	xmlns:tools="http://schemas.android.com/tools">
 
     <!-- This is the platform API where NativeActivity was introduced. -->
-	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="31"/>
+	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="21"/>
 
     <application
 		android:hasCode="false"
+		android:theme="@android:style/Theme.NoTitleBar"
 		android:label="@string/app_name"
 		tools:targetApi="21">
 		
