--- a/platforms/sdl/android/app/build.gradle
+++ b/platforms/sdl/android/app/build.gradle
@@ -29,6 +29,7 @@ android {
     }
     sourceSets.main {
         java.srcDir '../../../../thirdparty/SDL2/src/android-project/app/src/main/java'
+        assets.srcDir '../../../../game'
     }
     externalNativeBuild {
         cmake {
