--- a/platforms/windows/projects/MinecraftClient.Win32/MinecraftClient.Win32.vcxproj
+++ b/platforms/windows/projects/MinecraftClient.Win32/MinecraftClient.Win32.vcxproj
@@ -121,7 +121,7 @@
     <ClInclude Include="$(MC_ROOT)\platforms\windows\SoundSystemDS.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="$(MC_ROOT)\thirdparty\stb_image_impl.c" />
+    <ClCompile Include="$(MC_ROOT)\thirdparty\stb_image\src\stb_image_impl.c" />
     <ClCompile Include="$(MC_ROOT)\platforms\windows\AppPlatform_win32.cpp" />
     <ClCompile Include="$(MC_ROOT)\platforms\windows\LoggerWin32.cpp" />
     <ClCompile Include="$(MC_ROOT)\platforms\windows\main.cpp" />
